[package]
name = "conductor-cli"
version = "0.1.0"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conductor = { path = "../conductor" }
env_logger = "0.8"
tokio = { version = "1", features = ["full"] }
clap = "3.0.0-beta.2"
log = "0.4"
rsa = "0.4"
