[package]
name = "conductor-lib"
version = "0.1.0"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"

[dependencies]
futures = "0.3.13"
tokio = { version = "1.2.0", features = ["net", "sync", "rt", "rt-multi-thread", "io-util", "macros", "time"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
bitflags = "1.2.1"
uuid = { version = "0.8.2", features = ["serde"] }
picky = { version = "6.1.2", features = ["x509", "jose"] }
serde = "1.0.123"
thiserror = "1.0.24"
bytes = "1.0.1"
byteorder = "1.4.2"
serde_cbor = "0.11.1"
log = "0.4.14"