[package]
name = "conductor-server"
version = "0.1.0"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"

[dependencies]
conductor-lib = { path = "../conductor-lib" }
clap = "3.0.0-beta.2"
tokio = { version = "1.2.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
anyhow = "1.0.38"
ctrlc = "3.1.8"
env_logger = "0.8.3"
log = "0.4.14"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "master" }