[package]
name = "conductor"
version = "0.1.0"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
anyhow = "1.0.40"
toml = "0.5.8"
serde = "1.0.125"
base64 = "0.13.0"
picky = { version = "6.2.0", features = ["jose"] }
byteorder = "1.4.3"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.14"
env_logger = "0.8.3"
