[package]
name = "conductor"
version = "0.1.0"
authors = ["Vladyslav Nikonov <mail@pacmancoder.xyz>"]
edition = "2018"

[dependencies]
log = "0.4"
toml = "0.5"
serde = "1.0"
base64 = "0.13"
picky = { version = "6.2", features = ["jose"] }
byteorder = "1.4"
uuid = { version = "0.8", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1"
directories = "3"
rsa = "0.4"
rand = "0.8"
serde_json = "1"
sha2 = "0.9"

[dev-dependencies]
expect-test = "1"
